# mcp-servers

./: .gitignore  DOCKER_SETUP.md  HOME_ASSISTANT_SETUP.md  PROJECT_SUMMARY.md  README.md
efresh-mcp-server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cursor-config-example.json  docker-compose.example.yml  docker-compose.yml  pyproject.toml
efresh-mcp-server/efresh_server/: __init__.py  __main__.py  auth.py  cli.py  efresh_client.py  http_server.py  models.py  server.py
scripts/: start-mcp-proxy.sh
sklavenitis-mcp-server/: .gitignore  README.md  cursor-config-example.json  pyproject.toml  uv.toml
sklavenitis-mcp-server/sklavenitis_server/: __init__.py  __main__.py  auth.py  cli.py  models.py  server.py  sklavenitis_client.py
skroutz-mcp-server/: .dockerignore  .env.example  .gitignore  Dockerfile  HTTP_SERVER.md  README.md  docker-compose.example.yml  docker-compose.yml  pyproject.toml
skroutz-mcp-server/skroutz_server/: __init__.py  __main__.py  auth.py  cli.py  http_server.py  models.py  server.py  skroutz_client.py  skroutz_client_cffi.py  skroutz_client_hybrid.py  skroutz_client_playwright.py  sse_server.py
