[project]
name = "sklavenitis-mcp-server"
version = "0.1.0"
description = "MCP server for Sklavenitis grocery store"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "curl-cffi>=0.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
sklavenitis-server = "sklavenitis_server.cli:main"

