[project]
name = "skroutz-mcp-server"
version = "0.1.0"
description = "MCP server for interacting with skroutz.gr e-commerce store"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "curl-cffi>=0.7.0",
]

[project.scripts]
skroutz-server = "skroutz_server.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
